# multiplai-core

./: .gitignore  LICENSE  README.md  pyproject.toml
src/multiplai_core/: __init__.py  agent_runner.py  aio.py  config.py  costing.py  env.py  log_utils.py  model_client.py  paths.py  pricing.json  text.py
tests/: conftest.py  test_agent_runner.py  test_aio.py  test_config.py  test_costing.py  test_env.py  test_log_utils.py  test_model_client.py  test_paths.py  test_pyproject_sdk_floor.py  test_text.py
