[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multiplai-core"
version = "0.1.0"
description = "Shared library for the Multiplai Claude Code plugins — paths, config, logging, model client."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "spikelab" }]
dependencies = [
    "anthropic==0.102.0",
    "claude-agent-sdk==0.1.56",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/multiplai_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
