[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multiplai-core"
dynamic = ["version"]
description = "Shared library for the Multiplai Claude Code plugins — paths, config, logging, model client."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Spike", email = "fsm@spikelab.org" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
# Loose ranges: this is a library, so exact pins would make it unsolvable
# alongside any consumer (or sibling dep) that needs a different version.
dependencies = [
    "anthropic>=0.40,<1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# claude-agent-sdk is optional so API-only consumers stay light. NOTE: nothing
# injects it at runtime — PEP 723 uv scripts get a fresh isolated env, so any
# consumer that wants the SDK backend MUST depend on `multiplai-core[sdk]`
# explicitly. Without it, AgentSDKClient degrades to the API backend, which
# needs an API key.
#
# Floor is >=0.2.116: the 0.1.x line misparses the terminal result message
# emitted by modern Claude CLIs (>=2.x), raising the notorious
# `Claude Code returned an error result: success` after a full generation.
# The retry wrapper can't help — it's deterministic. Matches the floor pinned
# by multiplai-kit / multiplai-gui so all SDK consumers resolve compatibly.
#
# Ceiling is <0.3: claude-agent-sdk is a fast-moving 0.x package where a single
# minor bump (0.1 -> 0.2) already shipped a breaking result-message parse
# change. Without a cap, a downstream consumer that doesn't vendor our lock
# could resolve a future 0.3.x/1.0 fresh and silently re-break the same way.
sdk = ["claude-agent-sdk>=0.2.116,<0.3"]
# load_env() needs python-dotenv; without this extra it degrades to a no-op
# with a warning.
dotenv = ["python-dotenv>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/spikelab/multiplai-core"
Repository = "https://github.com/spikelab/multiplai-core"

[tool.hatch.version]
# Single source of truth for the version — no hand-duplicated string to drift.
path = "src/multiplai_core/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/multiplai_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
